--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Landing Page Design</title>
-    <link rel="stylesheet" href="index..css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mediaQueries.css">
     <link rel="icon" href="/images/fav.webp" type="image/x-icon">
 </head>
