--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <br>
         <br>
         <div class="banner-image">
-            <img src="/images/bpic-removebg-preview.png" alt="Blockchain related image">
+            <img src="./images/bpic-removebg-preview.png" alt="Blockchain related image">
         </div>
      </div>
 
