--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <p>We have been working with some Fortune 500+ clients</p>
         </div>
         <div class="section-image">
-            <img src="/images/icon 1.svg" alt="">
-            <img src="/images/icon 2.svg" alt="">
-            <img src="/images/icon 3.svg" alt="">
-            <img src="/images/icon 4.svg" alt="">
-            <img src="/images/icon 5.svg" alt="">
-            <img src="/images/icon 6.svg" alt="">
+            <img src="./images/icon 1.svg" alt="">
+            <img src="./images/icon 2.svg" alt="">
+            <img src="./images/icon 3.svg" alt="">
+            <img src="./images/icon 4.svg" alt="">
+            <img src="./images/icon 5.svg" alt="">
+            <img src="./images/icon 6.svg" alt="">
         </div>
       </div>
 
@@ -77,12 +77,12 @@
     </div>
     <div class="cards">
         <div class="card1">
-            <img src="/images/people_icon-removebg-preview.png" alt="">
+            <img src="./images/people_icon-removebg-preview.png" alt="">
             <h1>Creator Communities</h1>
             <p>Support creators with NFT marketplace and direct engagement with their audience.</p>
         </div>
         <div class="card2">
-            <img src="/images/financial_icon-removebg-preview.png" alt="">
+            <img src="./images/financial_icon-removebg-preview.png" alt="">
             <h1>Financial Institutions</h1>
             <p>Blockchain enables secure,transparent and decentralized financial transaction.</p>
         </div>
