--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p>Blockchain enables secure,transparent and decentralized financial transaction.</p>
         </div>
         <div class="card3">
-            <img src="/images/supply_chain_icon-removebg-preview.png" alt="">
+            <img src="./images/supply_chain_icon-removebg-preview.png" alt="">
             <h1>Supply Chain Management</h1>
             <p>Enhance traceability,transparency and operational efficiency across global supply chains.</p>
         </div>
@@ -103,7 +103,7 @@
             <div class="section3-content2">
                 <div class="icon-up">
                     <div class="small1">
-                        <div class="image-icon1">                             <img src="/images/2 people.png" alt="">
+                        <div class="image-icon1">                             <img src="./images/2 people.png" alt="">
                         </div>
                         <div class="section-3-card-content-1">
                             <h1>120+</h1>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="small2">
                         <div class="image-icon2">
-                            <img src="/images/smart contract.webp" alt="">
+                            <img src="./images/smart contract.webp" alt="">
                         </div>                       
                         <div class="section-3-card-content-2">
                             <h1>420,000</h1>
@@ -123,7 +123,7 @@
                 <div class="icon-down"> 
                     <div class="small3">
                         <div class="image-icon3">
-                            <img src="/images/tauch icon.png" alt="">
+                            <img src="./images/tauch icon.png" alt="">
                         </div>
                         <div class="section-3-card-content-3">
                             <h1>$150 Billion+</h1>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="small4">
                         <div class="image-icon4">
-                        <img src="/images/wallet-icon--4.png" alt="">
+                        <img src="./images/wallet-icon--4.png" alt="">
                         </div>
                         <div class="section-3-card-content-4">
                             <h1>1,245,000+</h1>
@@ -153,7 +153,7 @@
     <div class="section4-content2">
         <div class="section4-content2-images">
             <div class="sec4-image1">
-                <img src="/images/blockchain-banking-finance.png" alt="">
+                <img src="./images/blockchain-banking-finance.png" alt="">
                 <div class="sec4-card1">
                     <div class="sec4-card1-cont1">
                         <p>Transforming banking with secure and decentralized solutions.</p>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="sec4-image2">
-            <img src="/images/blockchain traceablity.jpg" alt="">
+            <img src="./images/blockchain traceablity.jpg" alt="">
             <div class="sec4-card2">
                 <div class="sec4-card2-cont2">
                     <p>Ensuring transparency and traceability worldwide</p>
@@ -171,7 +171,7 @@
             </div>
             </div>
             <div class="sec4-image3">
-            <img src="/images/NFTs.webp" alt="">
+            <img src="./images/NFTs.webp" alt="">
             <div class="sec4-card3">
                 <div class="sec4-card3-cont3">
                    <p> Expanding blockchain with NFTs,Dapps, and Web3.</p>
@@ -186,7 +186,7 @@
   <!-- Contact form section  -->
     <div class="contact">
     <div class="contact-image">
-        <img src="/images/cont-img.webp" alt="">
+        <img src="./images/cont-img.webp" alt="">
     </div>
     <div class="contact-form">
         <div class="card">
@@ -212,10 +212,10 @@
         <h1>Blockchain</h1>
         <p>Copyrite @ 2020 Landify UI Kit. <br> All rights reserved</p>
         <div class="footer-icon">
-            <img src="/images/facebook-new icon.png" alt="">
-            <img src="/images/_linkedin_media_social_logo_website_network_networking-512.webp" alt="">
-            <img src="/images/youtube_logo-removebg-preview.png" alt="">
-            <img src="/images/instag-removebg-preview.png" alt="">
+            <img src="./images/facebook-new icon.png" alt="">
+            <img src="./images/_linkedin_media_social_logo_website_network_networking-512.webp" alt="">
+            <img src="./images/youtube_logo-removebg-preview.png" alt="">
+            <img src="./images/instag-removebg-preview.png" alt="">
         </div>
     </div>
     <div class="footer-content2">
