--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Responsive Landing Page Design</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mediaQueries.css">
-    <link rel="icon" href="/images/fav.webp" type="image/x-icon">
+    <link rel="icon" href="./images/fav.webp" type="image/x-icon">
 </head>
 <body>
 
@@ -213,7 +213,7 @@
         <p>Copyrite @ 2020 Landify UI Kit. <br> All rights reserved</p>
         <div class="footer-icon">
             <img src="./images/facebook-new icon.png" alt="">
-            <img src="./images/_linkedin_media_social_logo_website_network_networking-512.webp" alt="">
+            <img src="./images/linkedin_logo-removebg-preview.png" alt="">
             <img src="./images/youtube_logo-removebg-preview.png" alt="">
             <img src="./images/instag-removebg-preview.png" alt="">
         </div>
