Fiew changes in two sections

--- a/index.html
+++ b/index.html
@@ -54,18 +54,24 @@
      </div>
 
      <!-- Client Section  -->
-      <div class="section">
-        <div class="section-content">
+      <div class="section1">
+        <div class="section1-content">
             <h1>Our Clients-</h1>
             <p>We have been working with some Fortune 500+ clients</p>
         </div>
-        <div class="section-image">
-            <img src="./images/icon 1.svg" alt="">
-            <img src="./images/icon 2.svg" alt="">
-            <img src="./images/icon 3.svg" alt="">
-            <img src="./images/icon 4.svg" alt="">
-            <img src="./images/icon 5.svg" alt="">
-            <img src="./images/icon 6.svg" alt="">
+        <div class="section1-image">
+            <div class="section1-image-group1">
+                <img src="./images/icon 1.svg" alt="">
+                <img src="./images/icon 2.svg" alt="">
+            </div>
+            <div class="section1-image-group2">
+                <img src="./images/icon 3.svg" alt="">
+                <img src="./images/icon 4.svg" alt="">
+            </div>
+            <div class="section-image-group3">
+                <img src="./images/icon 5.svg" alt="">
+                <img src="./images/icon 6.svg" alt="">
+            </div>
         </div>
       </div>
 
