form bgc chnage

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <p>We have been working with some Fortune 500+ clients</p>
         </div>
         <div class="section1-image">
-            <div class="section1-image-group1">
-                <img src="./images/icon 1.svg" alt="">
-                <img src="./images/icon 2.svg" alt="">
-            </div>
+                <div class="section1-image-group1">
+                    <img src="./images/icon 1.svg" alt=>
+                    <img src="./images/icon 2.svg" alt="">
+                </div>
             <div class="section1-image-group2">
                 <img src="./images/icon 3.svg" alt="">
                 <img src="./images/icon 4.svg" alt="">
@@ -83,7 +83,7 @@
     </div>
     <div class="cards">
         <div class="card1">
-            <img src="./images/people_icon-removebg-preview.png" alt="">
+                <img src="./images/people_icon-removebg-preview.png" alt="">
             <h1>Creator Communities</h1>
             <p>Support creators with NFT marketplace and direct engagement with their audience.</p>
         </div>
